Web: fix transparent background on scrollbar in autocomplete (#5795)
* replacing thumb color with css variable.

* fixes #5355 - transparent bg on scrollbar,

* b prefix in css variable

--- a/Documentation/Blazorise.Docs/Styles/_base.scss
+++ b/Documentation/Blazorise.Docs/Styles/_base.scss
@@ -10,6 +10,7 @@
     text-transform: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    --b-scrollbar-thumb-background: #bfbfbf;
 }
 
 body {
@@ -63,7 +64,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #bfbfbf;
+    background: var(--b-scrollbar-thumb-background);
     border-radius: 1px;
 }
 
@@ -72,7 +73,7 @@ a {
 }
 
 html, body * {
-    scrollbar-color: #bfbfbf transparent;
+    scrollbar-color: var(--b-scrollbar-thumb-background) transparent;
     scrollbar-width: thin;
 }
 
